--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,23 @@
+.flex{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
-/* Your CSS Code here. */
+body{
+    font-family: sans-serif;
+}
+
+img{
+    width: 300px;
+    height: 100%;
+    opacity: .9;
+}
+p{
+    position: relative;
+    top: 0;
+    max-width: 500px;
+    text-align: center;
+    font-size: 1.2em;
+}
